<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dip" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_feed" />

        <EditText
            android:id="@+id/feed_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/optional"
            android:singleLine="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/feed_url" />

        <EditText
            android:id="@+id/feed_url"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/websiteorfeed"
            android:inputType="textUri"
            android:singleLine="true"
            android:text="" />

        <CheckBox
            android:id="@+id/wifionlycheckbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/refreshonwifionly" />
    </LinearLayout>

</ScrollView>